# ai-prompt-optimizer

./: .gitignore  README.md  package-lock.json  package.json
apps/backend/: .env.example  openapi.json  pyproject.toml  requirements.txt
apps/backend/app/: config.py  main.py
apps/backend/app/routers/: optimize.py
apps/backend/app/schemas/: contract.py
apps/backend/app/scripts/: generate_openapi.py
apps/backend/app/services/: groq.py
apps/backend/tests/: conftest.py  test_optimize.py
apps/extension/: index.html  manifest.json  package.json  sidepanel.html  vite.config.ts
apps/extension/src/: index.css  main.tsx
apps/extension/src/background/: index.ts
apps/extension/src/components/: AppLayout.tsx  PromptForm.tsx  ResponseView.tsx
apps/extension/src/types/: api.ts
apps/extension/src/utils/: api-client.ts
